Problems fixed by development version:

  * Tetrahedra with "old" XML format working again (r13993)

  * Option "-in file" for fermi_proj.x and fermi_velocity.x was not working
    in serial execution. Also: fermisurfer_example/ was missing (r13986)

  * Inconsistent "short name" for DFT was breaking Perdew-Wang pseudopotentials
    (r13975)

  * Yet another problem with last scf step in vc-relax, present since v.6.1: 
    if no atoms of a given kind were present, there was a division by zero
    and a NaN in starting magnetization (reported by Malte Sachs) (r13971)

  * FFT's for ARM libraries were broken (r13956,13959, courtesy Jason Wood)

New in development version:

  * Interface with Grimme's DFT-D3, as repackaged by Bálint Aradi
    (Miha Gunde and Layla Martins-Samos)
  
  * Phonons for two-dimensional systems (Thibault Sohier et al.)

Incompatible changes in development version:

  * __OPENMP with two underscores (set by configure) replaced by _OPENMP
    with one underscore (automatically set by all OpenMP-aware compilers)
  * "Old" xml input file deleted

Known problems in development version:

  * New format for charge density no longer allows to perform a non-scf
    calculation with k-points starting from a scf calculation at Gamma
  * NEB with one-k-point per pool requires "wf_collect=.false.", because
    update_neb is not updated for the new format

New in 6.2 version:

  * SCAN functional with libxc v.3; bands with meta-GGA can be computed
   (Davide Ceresoli)

  * EXX with localization (experimental)

  * Stress calculation is enabled in ESM
    “starting_charge” option added to SYSTEM namelist

  * Unscreened hybrid vdW-DF (JCP 146, 234106 (2017), contributed by 
    Per Hyldgaard and Jeff Neaton

Fixed in 6.2 version

  * DFPT with constrained magnetization for insulators wasn't working
    (r13915)

  * virtual.x was linking a duplicate obsolete "pseudo" module, leading to