@@ -124,8 +124,8 @@ late Prof. Eyvaz Isaev.
 Other contributors include: Lorenzo Paulatto (Univ. Paris VI) for
 PAW, 2n+1 code; William Parker (Argonne) for phonon terms in dielectric
 tensor; Tobias Wassmann (Univ. Paris VI) for third-order derivatives of GGA 
-potential. Weicheng Bao (Nanjing University) helped debugging the phonon
-code.
+potential. Weicheng Bao (Nanjing University) and Norge Cruz Hernandez
+(Universidad de Sevilla) helped debugging the phonon code.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \input ../../Doc/quote.tex
