@@ -1596,6 +1596,7 @@ read_file.o : ../../Modules/control_flags.o
 read_file.o : ../../Modules/fft_base.o
 read_file.o : ../../Modules/funct.o
 read_file.o : ../../Modules/gvecw.o
+read_file.o : ../../Modules/hdf5_qe.o
 read_file.o : ../../Modules/io_files.o
 read_file.o : ../../Modules/io_global.o
 read_file.o : ../../Modules/ions_base.o
@@ -1632,7 +1633,6 @@ read_file_new.o : ../../Modules/fft_base.o
 read_file_new.o : ../../Modules/fft_rho.o
 read_file_new.o : ../../Modules/funct.o
 read_file_new.o : ../../Modules/gvecw.o
-read_file_new.o : ../../Modules/hdf5_qe.o
 read_file_new.o : ../../Modules/io_files.o
 read_file_new.o : ../../Modules/io_global.o
 read_file_new.o : ../../Modules/ions_base.o
